--- a/Web.config
+++ b/Web.config
@@ -17,8 +17,7 @@
         <network
           host="localhost"
           port="25"
-          userName="me@xyzcom" 
-          password="abc123"
+          userName="me@xyzcom" password="abc123" 
         />
       </smtp>
     </mailSettings>
