Corrected a bug in the configuration file

--- a/Web.config
+++ b/Web.config
@@ -5,8 +5,8 @@
   </connectionStrings>
   <appSettings>
     <add key="SMSNumber" value="5555555555"/>
-    <add key="ToEmailAddresss" value="scott.metoyer@gmail.com"/>
-    <add key="FromEmailAddresss" value="scott.metoyer@gmail.com"/>
+    <add key="ToEmailAddress" value="scott.metoyer@gmail.com"/>
+    <add key="FromEmailAddress" value="scott.metoyer@gmail.com"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.0"/>
