Moved SMS carrier selection into Web.config setting

--- a/Web.config
+++ b/Web.config
@@ -4,7 +4,7 @@
     <add name="MySQLConnStr" connectionString="DRIVER={MySQL ODBC 3.51 Driver};Database=transport;Server=localhost;UID=smetoyer;PWD=password;"/>
   </connectionStrings>
   <appSettings>
-    <add key="SMSNumber" value="5555555555"/>
+    <add key="SMSNumber" value="5555555555@txt.att.net"/>
     <add key="ToEmailAddress" value="scott.metoyer@gmail.com"/>
     <add key="FromEmailAddress" value="scott.metoyer@gmail.com"/>
   </appSettings>
